logs/Slang/chapter-6/6.6.7--nettype_resolution_fn.sv.log
name: nettype_resolution_fn
description: user-defined nettype with resolution function tests
should_fail: 0
tags: 6.6.7
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.6.7--nettype_resolution_fn.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.6.7--nettype_resolution_fn.sv:8:53: error: dimension requires a constant range
	function automatic real real_sum (input real driver[]);
	                                                   ^~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.6.7--nettype_resolution_fn.sv:10:3: error: language feature not yet supported
		foreach (driver[i])
		^~~~~~~~~~~~~~~~~~~
